[gd_scene load_steps=4 format=3 uid="uid://cbfu4ny2eqkqs"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_4yx2e"]
[ext_resource type="FontFile" uid="uid://dfhrdf7enuaer" path="res://assets/Chewy Bubble.otf" id="2_4as0k"]

[sub_resource type="Theme" id="Theme_3epe8"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 123.0
offset_top = 44.0
offset_right = 123.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4yx2e")

[node name="HealthContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = -358.0
offset_top = -95.0
offset_right = 117.0
offset_bottom = -22.0
scale = Vector2(1.34845, 1.3363)

[node name="HealthLabel" type="Label" parent="HealthContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.952941, 0.435294, 0.45098, 1)
theme_override_colors/font_shadow_color = Color(0.772549, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.92549, 0, 0.886275, 1)
theme_override_fonts/font = ExtResource("2_4as0k")
theme_override_font_sizes/font_size = 35
text = "PLAYER HEALTH:"
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="HealthContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.952941, 0.435294, 0.45098, 1)
theme_override_colors/font_outline_color = Color(0.768627, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_4as0k")
theme_override_font_sizes/font_size = 30

[node name="Inventory" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1136.0
offset_top = -88.0
offset_right = 1367.0
offset_bottom = 116.0
grow_horizontal = 0
theme = SubResource("Theme_3epe8")

[node name="AmmoLabel" type="Label" parent="Inventory"]
layout_mode = 2
theme_override_colors/font_color = Color(0.952941, 0.435294, 0.45098, 1)
theme_override_colors/font_shadow_color = Color(0.654902, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_4as0k")
theme_override_font_sizes/font_size = 35
text = "AMMO"
horizontal_alignment = 2

[node name="WeaponsContainer" type="VBoxContainer" parent="Inventory"]
layout_mode = 2

[node name="Rifle" type="Label" parent="Inventory/WeaponsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4as0k")
theme_override_font_sizes/font_size = 35
text = "RIFLE"
horizontal_alignment = 2

[node name="Shotgun" type="Label" parent="Inventory/WeaponsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4as0k")
theme_override_font_sizes/font_size = 35
text = "SHOTGUN"
horizontal_alignment = 2

[node name="MachineGun" type="Label" parent="Inventory/WeaponsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4as0k")
theme_override_font_sizes/font_size = 35
text = "MACHINE GUN"
horizontal_alignment = 2

[node name="Weapons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1403.23
offset_top = 88.38
offset_right = 3502.23
offset_bottom = 1482.38
grow_horizontal = 0
rotation = 1.5708
scale = Vector2(0.225, 0.225)

[node name="Slot2" type="TextureRect" parent="Weapons"]
layout_mode = 2
expand_mode = 3

[node name="Slot1" type="TextureRect" parent="Weapons"]
layout_mode = 2
expand_mode = 3

[node name="Slot0" type="TextureRect" parent="Weapons"]
layout_mode = 2
expand_mode = 3
